# ladon

./: .gitignore  Cargo.toml  README.md  flake.nix  out.json
.github/ISSUE_TEMPLATE/: feature_request.yml
layout/: layout.d2
migrations/: 20250225143444_v0.1.down.sql  20250225143444_v0.1.up.sql
src/: app.rs  evaluator.rs  lib.rs  main.rs  state.rs
src/components/: error.rs  go_back.rs  mod.rs
src/core/: mod.rs
src/core/db/: db.rs
src/core/evaluator/: coordinator.rs
src/evaluator/: evaluator.rs  mod.rs  parser.rs
src/hydra/: mod.rs
src/hydra/db/: db.rs  mod.rs
src/hydra/evaluator/: coordinator.rs  evalmanager.rs  evaluator.rs  mod.rs  parser.rs
src/hydracore/: mod.rs
src/hydracore/db/: db.rs
src/hydracore/evaluator/: coordinator.rs  mod.rs
src/models/: derivation.rs  evaluation.rs  job.rs  jobset.rs  mod.rs  project.rs
src/routes/: createjobset.rs  createproject.rs  home.rs  jobset.rs  mod.rs  notfound.rs  project.rs
src/routes/job/: show.rs
src/routes/jobset/: create.rs  edit.rs  mod.rs  show.rs
src/routes/jobsets/: create.rs  show.rs
src/utils/: mod.rs
style/: app.module.scss  baseline.scss  colors.scss  createproject.scss  home.scss  job.module.scss  jobset.module.scss  jobset.scss  main.scss  project.module.scss  project.scss
style/components/: error.module.scss  go_back.module.scss
style/generics/: input.scss  table.scss
style/stylance/: _index.scss  app.module-1aa87a3.scss  error.module-4c8078a.scss  go_back.module-f295c00.scss  job.module-a80ffd4.scss  jobset.module-4e72800.scss  project.module-3760849.scss
(+20 files in other folders)
