[package]
name = "hydra-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hydra-rs"
path = "src/main.rs"

[lib]
name = "hydra"
path = "src/hydra/mod.rs"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
